# gop

./: CMakeLists.txt
examples/: CMakeLists.txt
lib/: CMakeLists.txt
lib/contour/: CMakeLists.txt
lib/imgproc/: CMakeLists.txt
lib/learning/: CMakeLists.txt
lib/proposals/: CMakeLists.txt
lib/python/: CMakeLists.txt  imgproc.cpp
lib/python/dataset/: CMakeLists.txt
lib/segmentation/: CMakeLists.txt
lib/util/: CMakeLists.txt
